name:                web-push
version:             0.1.2.0
synopsis:            Send messages using Web Push protocol.
description:         Please see README.md
homepage:            https://github.com/sarthakbagaria/web-push#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria
maintainer:          neokits@gmail.com
copyright:           2017 Sarthak Bagaria
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.WebPush
                       Web.WebPush.Internal
  ghc-options:        -Wall -fwarn-tabs -O2
  build-depends:       base                          
                     , aeson
                     , time
                     , bytestring                    
                     , base64-bytestring             
                     , text                          
                     , cryptonite                    
                     , binary                        
                     , memory                        
                     , random                        
                     , http-client                   
                     , http-types                    
                     , exceptions                    
                     , transformers                  
                     , mtl                           
                     , jose                    >= 0.7.0.0      
                     , lens                          

  default-language:    Haskell2010

test-suite web-push-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       WebPushEncryptionSpec
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base
                     , web-push
                     , hspec                         >= 2.4.3      && < 2.5
                     , bytestring                    >= 0.9        && < 0.11
                     , base64-bytestring             >= 1.0.0.1    && < 1.1
                     , binary                        >= 0.7.5      && < 0.9

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/web-push
